apps/nerdd-backend/envs/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-backend
spec:
  replicas: 1
  template:
    spec:
      affinity: null
      containers:
        - name: nerdd-backend
          image: nerdd-backend:latest
          args:
            - --config-name
            - production
            - ++db.host=$(DB_HOST)
            - ++db.port=$(DB_PORT)
            - ++channel.name=$(CHANNEL)
            - ++channel.broker_url=$(BROKER_URL)
            - ++channel.broker_username=$(BROKER_USERNAME)
            - ++channel.broker_password=$(BROKER_PASSWORD)
            - ++s3_url=$(S3_URL)
            - ++s3_bucket=$(S3_BUCKET)
            - ++s3_access_key_id=$(S3_ACCESS_KEY_ID)
            - ++s3_secret_access_key=$(S3_SECRET_ACCESS_KEY)
