apps/nerdd-backend/envs/local/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nerdd-gateway
      namespace: nginx-gateway
  hostnames:
    - localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /websocket
      backendRefs:
        - group: ""
          kind: Service
          name: nerdd-backend
          port: 8000
          weight: 1
